opam-version: "1.2"
name: "arakoon"
maintainer: "Romain Slootmaekers <romain.slootmaekers@openvstorage.com>"
authors: ["Romain Slootmaekers <romain.slootmaekers@openvstorage.com>"
          "Jan Doms <jan.doms@openvstorage.com>"]
homepage: "https://github.com/openvstorage/arakoon"
bug-reports: "https://github.com/openvstorage/arakoon/issues"
license: "Apache 2.0"
dev-repo: "https://github.com/openvstorage/arakoon.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocamlfind" {build}
  "bisect" {test & >= "1.3"}
  "camltc" {>= "0.9.4"}
  "camlbz2" {>= "0.6.0"}
  "conf-libev" {>= "4-11"}
  "lwt" {>= "3.0.0"}
  "lwt_log"
  "lwt_ssl" {>= "1.0.1"}
  "ocplib-endian" {>= "1.0"}
  "ssl" {>= "0.5.3"}
  "snappy" {>= "0.1.0"}
  "core" {>="0.9.0"}
  "dune" { build }
  "redis-lwt"
  "uri" {>= "1.9.2"}
]
available: [ocaml-version >= "4.03.0" & opam-version >= "1.2" & os != "darwin" ]


depexts:[
  [[ "ubuntu"] ["help2man"] ]
  [[ "debian"] ["help2man"] ]
]
